      content.  Link checking also works for Link objects.

    - (__future__) Added "composite content" types (see the "dogbowl
      proposal",
      (http://cmf.zope.org/rqmts/proposals/compounds/compoundproposal.txt).

    - (__future__) Added DCWorkflow (through-the-web configurable
      workflows) to the core set of CMF products.

CMF 1.3 beta2 (2002/06/30)

  New Features

    - Made the id of the current user available to old action providers
      (DCWorkflow being a prime example) as 'user_id' (Tracker #495,
      thanks to Luca Olivetti for the patch).

    - Modified the 'standard_error_message' page template to show the
      'error_log_url', if passed in (Zope 2.6 will pass this argument
      if an error log is installed).

    - Extended the metadata tool to permit passing the type name
      directly (e.g., when building a new object, one might need to know
      the allowed subjects before construction).

    - Added a working calendar implementation to the CMFCalendar product,
      which had previously provided only an Event content type.  Thanks to
      Andy Dawkins for the work.

    - Updated FS-based skin methods to read optional '.security files,
      whcih control the role-permission mappings for each skin method.
      See CMFCore/tests/fake_skins/fake_skin/test4.py.security for an
      example.

  Bugs Fixed

    - Enabled creation of "My Stuff" folder for users (e.g., the manager)
      authenticated "above" the normal user folder (Tracker #485, thanks
      to Dieter Maurer for the patch).

    - Fixed handling of discussion items so that they are correctly
      indexed, unindexed and reinserted into the workflows when copied
      or moved.

    - Correctly reindex the just-reset workflow variables of an object
      in a DCWorkflow after a paste.

    - Correctly insert into the workflows the objects created by a
      Scriptable Type.

    - Fixed Friendly Date Criterion edit form to correctly display the