@@ -6,31 +6,47 @@
   </td>
   <td align="left">
    <label for="" tal:attributes="for string:cb_${here/getId}">
-    <strong title="" tal:attributes="title here/Description">"Friendly" Date:</strong>
+    <strong title="" tal:attributes="title here/Description"
+    >"Friendly" Date:</strong>
     <tt tal:content="here/Field">Field</tt>
    </label>
-   <input type="hidden" name="criteria.id:records" value="" tal:attributes="value here/getId">
+   <input type="hidden" name="criteria.id:records" value=""
+          tal:attributes="value here/getId" />
   </td>
  </tr>
  <tr valign="top">
   <td width="20">&nbsp;</td>
   <td>
     <select name="criteria.operation:records">
-     <option value="min" tal:attributes="selected python:here.operation=='min'">At the least:</option>
-     <option value="max" tal:attributes="selected python:here.operation=='max'">At the most:</option>
+     <option value="min"
+             tal:attributes="selected python:here.operation=='min'"
+     >At the least:</option>
+     <option value="max"
+             tal:attributes="selected python:here.operation=='max'"
+     >At the most:</option>
+     <option value="within_day"
+             tal:attributes="selected python:here.operation=='within_day'"
+     >Within the day:</option>
     </select>
 
-   <select name="criteria.value:records" tal:define="dateoptions here/defaultDateOptions">
+   <select name="criteria.value:records"
+           tal:define="dateoptions here/defaultDateOptions">
      <option value=""
         tal:repeat="doption dateoptions"
-        tal:attributes="value python:doption[0]; selected python:here.value == doption[0]"
+        tal:attributes="value python:doption[0];
+                        selected python:here.value == doption[0];
+                       "
         tal:content="python:doption[1]"
      >Date Option</option>
    </select>
 
     <select name="criteria.daterange:records">
-     <option value="old" tal:attributes="selected python:here.daterange == 'old'">old</option>
-     <option value="ahead" tal:attributes="selected python:here.daterange == 'ahead'">ahead</option>
+     <option value="old"
+             tal:attributes="selected python:here.daterange == 'old'"
+     >old</option>
+     <option value="ahead"
+             tal:attributes="selected python:here.daterange == 'ahead'"
+     >ahead</option>
     </select>
   </td>
  </tr>
